Clase current agreagda a los enlaces, se removio el cargando de la pagina, mejorando la rapidez

--- a/1/public/css/style.css
+++ b/1/public/css/style.css
@@ -5,7 +5,10 @@ body {
 	font: 14px/26px 'Open Sans', Arial, Helvetica, sans-serif;
 }
 
-/*a { color: #fdc800; }*/
+#sliders {
+	overflow: hidden;
+	max-height: 570px
+}
 a:hover,
 a:focus {
 	color: #fdc800;
