--- a/1/public/css/responsive.css
+++ b/1/public/css/responsive.css
@@ -1,16 +1,3 @@
-/* Large Devices Styles Starts */
-
-@media (min-width: 1200px) {
-	.newsletter-block .form-control,
-	.newsletter-block .btn-secondary {
-		padding: 10px 20px;
-	}
-	.social-media-block ul.sm-links li + li {
-		margin-left: 10px;
-	}
-}
-
-/* Medium Devices Styles Starts */
 @media (min-width: 992px) and (max-width: 1199px) {
 	.header-links li {
 		padding-left: 2px;
@@ -21,57 +8,39 @@
 		top: 70px;
 	}
 
-	#camera_wrap_1 .camera_caption {
-		bottom: 35%;
-		left: 13%;
+	/* Products Section Styles Starts */
+	#product-carousel .thumbnail .product-zoom {
+		top: -23%;
 	}
-		#camera_wrap_1 .camera_caption h1 {
-			font-size: 40px;
-		}
-		#camera_wrap_1 .camera_caption h5 {
-			line-height: 26px;
-		}
-
-		/* Products Section Styles Starts */
-
-		#product-carousel .thumbnail .product-zoom {
-			top: -23%;
-		}
-		#product-carousel .thumbnail:hover .product-zoom {
-			top: 23%;
-		}
-		#product-carousel .carousel-control.left {
-			left: -30px;
-		}
-		#product-carousel .carousel-control.right {
-			right: -30px;
-		}
-
-	/* Footer Top Area Styles Starts */
-
-	.newsletter-block .form-control,
-	.newsletter-block .btn-secondary {
-		padding: 10px 13px;
+	#product-carousel .thumbnail:hover .product-zoom {
+		top: 23%;
 	}
-	.social-media-block ul.sm-links li + li {
-		margin-left: 4px;
+	#product-carousel .carousel-control.left {
+		left: -30px;
 	}
-
+	#product-carousel .carousel-control.right {
+		right: -30px;
+	}
 }
 
+@media (min-width: 768px) {
+	.visso-list .thumbnail:hover .caption {
+		top: 35%;
+		display: block;
+		-webkit-transform: translateY(0);
+			-moz-transform: translateY(0);
+				transform: translateY(0);
+	}
+}
 /* Small Devices Styles Starts */
-
 @media (min-width: 768px) and (max-width: 991px) {
-
-/* Header Links Styles Starts */
 
 	.header-links li {
 		padding-left: 2px;
 		padding-right: 2px;
 	}
 
-/* Navigation Styles Starts */
-
+	/* Navigation Styles Starts */
 	#main-menu-wrap {
 		top: 60px;
 	}
@@ -79,8 +48,7 @@
 		padding: 0;
 	}
 
-/* Brand Logo Styles Starts */
-
+	/* Brand Logo Styles Starts */
 	#nav .navbar-header {
 		position: relative;
 	}
@@ -88,248 +56,98 @@
 		height: auto;
 		padding: 6px 0
 	}
-			#nav .navbar-brand span.mid {
-				padding-left: 2px;
-				font-family: 'Rochester', cursive;
-				font-size: 42px;
-				text-transform: lowercase;
-			}
-			#nav .navbar-brand span.last {
-				font-family: 'Roboto', sans-serif;
-				font-weight: 300;
-				font-style: italic;
-			}
-
-/* Slider Styles Starts */
-
-	#camera_wrap_1 .camera_caption {
-		bottom: 2%;
-		left: 13%;
+	#nav .navbar-brand span.mid {
+		padding-left: 2px;
+		font-family: 'Rochester', cursive;
+		font-size: 42px;
+		text-transform: lowercase;
 	}
-		#camera_wrap_1 .camera_caption h1 {
-			font-size: 30px;
-			line-height: 42px;
-		}
-		#camera_wrap_1 .camera_caption h5 {
-			font-size: 22px;
-			line-height: 24px;
-		}
-		#camera_wrap_1 .camera_caption .btn-transparent {
-			margin-top: 20px;
-			padding: 8px 20px !important;
-			font-size: 18px !important;
-		}
-
-/* Products Section Styles Starts */
-
-		#product-carousel .carousel-control.left {
-			left: -30px;
-		}
-		#product-carousel .carousel-control.right {
-			right: -30px;
-		}
-
-/* Footer Top Area Styles Starts */
-
-	.newsletter-block {
-		margin-bottom: 25px;
-	}
-		.newsletter-block .form-control,
-		.newsletter-block .btn-secondary {
-			padding: 10px 13px;
-		}
-		.newsletter-block h4,
-		.social-media-block h4 {
-			margin-bottom: 15px;
-		}
-		.newsletter-block h4,
-		.social-media-block h4,
-		.social-media-block ul.sm-links {
-			text-align: center;
-		}
-		.social-media-block ul.sm-links li + li {
-			margin-left: 8px;
-		}
-
-/* Footer Styles Starts */
-
-	.footer-boxes > div {
-		min-height: 250px;
+	#nav .navbar-brand span.last {
+		font-family: 'Roboto', sans-serif;
+		font-weight: 300;
+		font-style: italic;
 	}
 
+	/* Products Section Styles Starts */
+	#product-carousel .carousel-control.left {
+		left: -30px;
+	}
+	#product-carousel .carousel-control.right {
+		right: -30px;
+	}
 }
 
 /* Extra Small Devices Styles Starts */
-
 @media (max-width: 767px) {
 
-/* Top Bar Styles Starts */
-
-.top-bar {
-	display: none;
-}
-
-/* Header Links Styles Starts */
-
-	.header-links {
+	/* Top Bar Styles Starts */
+	.top-bar {
+		display: none;
 	}
-
-/* Currency & Languages Drop Down Styles Starts */
-
-	.top-bar .btn-group {
-		float: right;
+	#sliders {
+		max-height: inherit;
 	}
-
-/* Search Styles Starts */
-
-	.search {
-		margin-top: 10px;
+	.links-socials {
+		margin-top: 0;
+		margin-bottom: 10px;
+		margin-left: 12px;
+		width: 100%;
 	}
-
-/* Cart Style Starts */
-
-	#cart .btn-default {
-		margin-top: 10px;
+	.breadcrumb {
+		margin-top: 50px;
 	}
-
-/* Navigation Styles Starts */
-
+	.visso-list .thumbnail .caption {
+		top: 0% !important;
+		display: block;
+	}
 	#main-menu-wrap {
 		top: 50px;
 	}
-		#nav.navbar-default {
-			border-radius: 5px;
-		}
-		#nav .navbar-nav > li > a {
-			padding-top: 10px;
-		}
-		#nav.navbar-default .navbar-toggle {
-			margin-top: 26px;
-			border-color: #fff;
-			background: none;
-		}
-		#nav.navbar-default .navbar-toggle span {
-			background-color: #fff;
-		}
-		#nav.navbar-default .navbar-toggle:hover {
-			background-color: #fff;
-			border-color: #fff;
-		}
-		#nav.navbar-default .navbar-toggle:hover span {
-			background-color: #de4b39;
-		}
-		#nav.navbar-default .navbar-collapse {
-			margin-top: 10px;
-			border-color: #ffdfdb;
-		}
-
-/* Slider Styles Starts */
-
-	#camera_wrap_1 .camera_prev,
-	#camera_wrap_1 .camera_next {
-		top: 240px;
+	#nav.navbar-default {
+		border-radius: 5px;
 	}
-	#camera_wrap_1 .camera_commands {
-		display: none;
+	#nav .navbar-nav > li > a {
+		padding-top: 10px;
 	}
-
-/* About Section Styles Starts */
-
-.about-banners .img-responsive {
-	margin-left: auto;
-	margin-right: auto;
-}
-
-/* Products Section Styles Starts */
-
-		#product-carousel .thumbnail .product-zoom {
-			top: -23%;
-		}
-		#product-carousel .thumbnail:hover .product-zoom {
-			top: 23%;
-		}
-		#product-carousel .carousel-control.left {
-			left: 0;
-		}
-		#product-carousel .carousel-control.right {
-			right: 0;
-		}
-
-/* Recent Articles Section Styles Starts */
-
-	.recent-articles .content-box {
-		text-align: center;
+	#nav.navbar-default .navbar-toggle {
+		margin-top: 26px;
+		border-color: #fff;
+		background: none;
+		margin-right: 0
 	}
-		.recent-articles .content-box .img-responsive {
-			margin-left: auto;
-			margin-right: auto;
-		}
-		.recent-articles .content-box > .row .img-responsive {
-			margin-top: 30px;
-		}
-		.recent-articles .content-box + .content-box > .row .img-responsive {
-			margin-top: 0;
-			margin-bottom: 30px;
-		}
-
-/* Clearance Sale Section Styles Starts */
-
-	.clearance h4 {
-		text-align: center;
+	#nav.navbar-default .navbar-toggle span {
+		background-color: #fff;
 	}
-	.clearance .col-md-8 h4:first-of-type {
-		margin-top: 50px;
+	#nav.navbar-default .navbar-toggle:hover {
+		background-color: #fff;
+		border-color: #fff;
 	}
-	.clearance .col-md-8 h4 {
-		margin-top: 30px;
+	#nav.navbar-default .navbar-toggle:hover span {
+		background-color: #de4b39;
 	}
-		.clearance .col-sm-4 .thumbnail {
-			margin-bottom: 30px;
-		}
-		.clearance .col-sm-4:last-of-type .thumbnail {
-			margin-bottom: 0;
-		}
-
-/* Footer Top Area Styles Starts */
-
-	.newsletter-block {
-		margin-bottom: 25px;
-	}
-		.newsletter-block .form-control,
-		.newsletter-block .btn-secondary {
-			padding: 10px 12px;
-		}
-		.newsletter-block h4,
-		.social-media-block h4 {
-			margin-bottom: 15px;
-		}
-		.newsletter-block h4,
-		.social-media-block h4,
-		.social-media-block ul.sm-links {
-			text-align: center;
-		}
-		.social-media-block ul.sm-links li + li {
-			margin-left: 8px;
-		}
-
-/* Footer Styles Starts */
-
-	.footer-boxes {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-	.footer-boxes > div:nth-child(2) {
-		border-width: 0 1px;
-	}
-	.copyright {
-		text-align: center;
-	}
-	.copyright .pull-right {
+	#nav.navbar-default .navbar-collapse {
 		margin-top: 10px;
-	}
-	.copyright .pull-left,
-	.copyright .pull-right {
-		float: none !important;
+		border-color: #ffdfdb;
 	}
 
+	/* About Section Styles Starts */
+	.about-banners .img-responsive {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	/* Products Section Styles Starts */
+
+	#product-carousel .thumbnail .product-zoom {
+		top: -23%;
+	}
+	#product-carousel .thumbnail:hover .product-zoom {
+		top: 23%;
+	}
+	#product-carousel .carousel-control.left {
+		left: 0;
+	}
+	#product-carousel .carousel-control.right {
+		right: 0;
+	}
 }
