--- a/1/public/css/style.css
+++ b/1/public/css/style.css
@@ -257,67 +257,8 @@ h6 { font-size: 16px; }
 	overflow: hidden;
 	margin-top: 58px;
 }
-	#camera_wrap_1 .camera_caption {
-		bottom: 40%;
-		left: 15%;
-		width: 100%;
-		background-color: rgba(0, 0, 0, .5);
-	}
-		#camera_wrap_1 .camera_caption > div {
-			background:none;
-			color: #FEC800;
-			text-shadow: 2px -1px 1px #000000;
-		}
-		#camera_wrap_1 .camera_caption h1 {
-			text-transform: uppercase;
-			font-weight: bold;
-			line-height: 58px;
-		}
-		#camera_wrap_1 .camera_caption hr {
-			margin-left: 20%;
-			margin-right: 20%;
-			border-top-width: 4px;
-		}
-		#camera_wrap_1 .camera_caption .btn-transparent {
-			margin-top: 30px;
-			font-size: 24px;
-			color: #fdc800
-		}
-	#camera_wrap_1 .camera_prev,
-	#camera_wrap_1 .camera_next {
-		background: #fdc800;
-	}
-	#camera_wrap_1 .camera_prev:hover,
-	#camera_wrap_1 .camera_next:hover {
-		background: #996630;
-	}
-
-/* Section Area Styles Starts */
-
-.section-area {
-	padding-top: 70px;
-	padding-bottom: 70px;
-}
-	.section-area h2 {
-		margin-top: 0;
-		margin-bottom: 40px;
-		color: #333;
-		text-transform: uppercase;
-		text-align: center;
-	}
-		/*.section-area h2 span {
-			padding-bottom: 10px;
-			border-bottom: 2px solid #fdc800;
-		}*/
-	.section-area.inverse h2 {
-		color: #fff;
-	}
-		.section-area.inverse h2 span {
-			border-color: #fff;
-		}
 
 /* About Section Styles Starts */
-
 .about {
 	background-color: #f7f7f7;
 	color: #6e6e6e;
@@ -354,36 +295,14 @@ h6 { font-size: 16px; }
 		top: 15px;
 		right: 15px;
 	}
-		.visso-list .thumbnail ul.btn-list li + li {
-			margin-top: 10px;
-		}
-	.visso-list .thumbnail .product-zoom {
-		position: absolute;
-		font-size: 36px;
-		color: #fff;
-		top: -30%;
-		left: 45%;
-	}
-	.visso-list .thumbnail:hover .product-zoom {
-		top: 30%;
-		left: 45%;
-		text-shadow: 2px 2px 7px #000;
+	.visso-list .thumbnail ul.btn-list li + li {
+		margin-top: 10px;
 	}
 	.visso-list .thumbnail .caption {
 		padding: 0;
 		width: 100%;
 		position: absolute;
 		background: rgba(0, 0, 0, 0.5);
-		-webkit-transform: translateY(150px);
-		   -moz-transform: translateY(150px);
-		        transform: translateY(150px);
-	}
-	.visso-list .thumbnail:hover .caption {
-		top: 35%;
-		display: block;
-		-webkit-transform: translateY(0);
-		   -moz-transform: translateY(0);
-		        transform: translateY(0);
 	}
 		.visso-list .thumbnail .caption .product-details {
 			padding: 25px 20px;
@@ -394,157 +313,8 @@ h6 { font-size: 16px; }
 			float: left;
 			color: #111;
 		}
-		.visso-list .thumbnail .caption .product-details .price {
-			margin: 0;
-			float: right;
-			text-align: right;
-		}
-			.visso-list .thumbnail .caption .product-details .price-old {
-				margin-right: 5px;
-				color: #6d6d6d;
-				font-style: italic;
-				font-size: 18px;
-				text-decoration: line-through;
-			}
-			.visso-list .thumbnail .caption .product-details .price-new {
-				color: #fdc800;
-				font-weight: bold;
-			}
-			.visso-list .thumbnail .caption .product-details .btn {
-				margin-top: 15px;
-			}
-.visso-list .carousel-control.left {
-left: -60px;
-}
-.visso-list .carousel-control.right {
-right: -60px;
-}
-.visso-list .carousel-control.left,
-.visso-list .carousel-control.right {
-width: auto;
-font-size: 35px;
-top: 47%;
-opacity: 1;
-background: none;
-color: #fdc800;
-text-shadow: none;
-}
 
-/* Checkout Section Styles Starts */
-.checkout hr {
-	border-color: #d4d4d4;
-}
-.checkout h4 {
-	margin-bottom: 30px;
-	padding-bottom: 10px;
-	color: #fdc800;
-	text-transform: uppercase;
-	border-bottom: 1px solid #d4d4d4;
-}
-.checkout h4.no-border {
-	margin-bottom: 20px;
-	padding-bottom: 0;
-	border: none;
-}
-.checkout .form-control {
-	padding-top: 8px;
-	padding-bottom: 8px;
-	color: #8b8b8b;
-	background-color: #fff;
-	border-color: #ddd;
-	height: 42px;
-}
-.checkout .form-inline .form-group {
-	margin-left: 8px;
-}
-.checkout .form-inline .form-group:first-of-type {
-	margin-left: 0;
-}
-.shopping-cart-table-area {
-}
-	.shopping-cart-table {
-		background-color: #fff;
-	}
-		.shopping-cart-table thead > tr {
-			background-color: #f3f3f3;
-		}
-		.shopping-cart-table thead > tr > td {
-			border-bottom: none;
-			font-size: 15px;
-			font-weight: bold;
-			color: #4b4b4b;
-		}
-		.shopping-cart-table thead > tr > td,
-		.shopping-cart-table tbody > tr > td {
-			border-color: #e8e8e8 !important;
-		}
-		.shopping-cart-table tbody > tr > td {
-			vertical-align: middle;
-		}
-		.shopping-cart-table tbody > tr > td img.img-responsive {
-			margin-left: auto;
-			margin-right: auto;
-		}
-		.shopping-cart-table tbody > tr > td.product-name,
-		.shopping-cart-table tbody > tr > td.product-name a {
-			color: #191919;
-			font-size: 16px;
-		}
-		.shopping-cart-table tbody > tr > td.price {
-			color: #fdc800;
-			font-size: 24px;
-			font-weight: bold;
-		}
-		.shopping-cart-table tbody > tr > td .btn-no-border {
-			background: none;
-			border: none;
-			color: #999;
-		}
-		.shopping-cart-table tbody > tr > td .btn-no-border:hover {
-			color: #996630;
-		}
-			.total-summary .dl-horizontal dt {
-				color: #252a2f;
-				font-weight: normal;
-			}
-			.total-summary .dl-horizontal dd {
-				margin-bottom: 10px;
-				color: #fdc800;
-				font-weight: bold;
-			}
-			.total-summary .dl-horizontal dd:last-of-type {
-				margin-bottom: 0;
-			}
-			.total-summary .dl-horizontal dt,
-			.total-summary .dl-horizontal dd {
-				text-align: right;
-			}
-			.total-summary .dl-horizontal.total dt,
-			.total-summary .dl-horizontal.total dd {
-				color: #fdc800;
-				font-size: 18px;
-			}
-		.total-summary .dl-horizontal.total {
-			margin-bottom: 30px;
-		}
-		.total-summary .btn-default {
-			margin-left: 10px;
-			text-transform: uppercase;
-		}
-	.shopping-cart-table-area,
-	.shipment-info,
-	.payment-method,
-	.coupon-code,
-	.shipping-taxes,
-	.total-summary {
-		margin-bottom: 40px;
-	}
-
-/* Contact Section Styles Starts */
-
-.contact {
-	background-color: #f7f7f7;
-}
+	/* Contact Section Styles Starts */
 	.contact .status {
 		display: none;
 	}
@@ -567,28 +337,8 @@ text-shadow: none;
 	}
 
 /* Google Map Area Starts */
-
 .map {
 	height: 400px;
-}
-
-/* Footer Top Area Styles Starts */
-.footer-top-area {
-	padding-top: 30px;
-	padding-bottom: 30px;
-	background-color: #4a4a4a;
-}
-.newsletter-block h4,
-.social-media-block h4 {
-	margin: 7px 0 0;
-	color: #fff;
-	text-transform: uppercase;
-}
-.newsletter-block .form-control {
-	background-color: #f7f7f7;
-	color: #2c2c2c;
-	height: 42px;
-	line-height: none;
 }
 
 /* Footer Styles Starts */
@@ -598,87 +348,35 @@ text-shadow: none;
 }
 
 /* Generic Styles Starts */
-.parallax {
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-attachment: fixed;
-}
-
 .no-border-radius,
-.search .input-group .form-control,
-.search .input-group .btn,
-#cart .dropdown-menu,
-.clearance .thumbnail,
 .visso-list .thumbnail,
-.checkout .form-control,
-.newsletter-block .form-control,
-.newsletter-block .btn-secondary,
 .btn-default,
 .btn-secondary {
 	-webkit-border-radius: 0;
 	   -moz-border-radius: 0;
 			border-radius: 0;
 }
-.social-media-block ul.sm-links li {
-	-webkit-border-radius: 50%;
-	   -moz-border-radius: 50%;
-			border-radius: 50%;
-}
-.no-boxshadow,
-.search .input-group .form-control,
-.search .input-group .btn,
-#cart .dropdown-menu,
-.checkout .form-control,
-.checkout .form-control:focus,
-.newsletter-block .form-control,
-.newsletter-block .btn-secondary,
-.newsletter-block .form-control:focus {
+.no-boxshadow {
 	-webkit-box-shadow: none;
 	   -moz-box-shadow: none;
 			box-shadow: none;
 }
 .clearance .thumbnail,
-.visso-list .thumbnail,
-.newsletter-block .form-control,
-.newsletter-block .form-control:focus {
+.visso-list .thumbnail {
 	border: none;
-}
-.checkout .form-control {
-	-webkit-box-shadow: inset 0 2px 2px #ececec;
-	   -moz-box-shadow: inset 0 2px 2px #ececec;
-	        box-shadow: inset 0 2px 2px #ececec;
-}
-.checkout .form-control:focus {
-	border-color: #c2c2c2;
-	-webkit-box-shadow: inset 0 2px 2px #f3f3f3;
-	   -moz-box-shadow: inset 0 2px 2px #f3f3f3;
-	        box-shadow: inset 0 2px 2px #f3f3f3;
 }
 .btn-transparent,
 .visso-list .thumbnail {
-	-webkit-transition: all 0.5s ease-in;
-	   -moz-transition: all 0.5s ease-in;
-	        transition: all 0.5s ease-in;
 	border: 1px solid #FEC800;
 	visibility: hidden;
 }
-.visso-list .thumbnail .product-zoom,
 .visso-list .thumbnail .caption {
-	-webkit-transition: all 0.2s ease-out;
-	   -moz-transition: all 0.2s ease-out;
-	        transition: all 0.2s ease-out;
+	-webkit-transition: all 0.2s;
+	   -moz-transition: all 0.2s;
+	        transition: all 0.2s;
 }
 
 /* Starts */
-
-.about1,
-.recent-articles,
-.testimonial {
-	-webkit-transform: skewY(-4deg);
-	   -moz-transform: skewY(-4deg);
-	        transform: skewY(-4deg);
-}
 .about,
 .products,
 .contact {
@@ -688,29 +386,6 @@ text-shadow: none;
 	padding-top: 80px;
 	padding-bottom: 0px;
 }
-.about1 > .container,
-.recent-articles > .container,
-.testimonial > .container {
-	-webkit-transform: skewY(4deg);
-	   -moz-transform: skewY(4deg);
-	        transform: skewY(4deg);
-}
-.rotate-box-1 {
-	position: absolute;
-	top: -50px;
-	left: 0;
-	width: 100%;
-	height: 110px;
-	-webkit-transform: skewY(-4deg);
-	   -moz-transform: skewY(-4deg);
-	        transform: skewY(-4deg);
-}
-.about > .rotate-box-1 {
-	top: -59px;
-	height: 120px;
-}
-.about > .rotate-box-1,
-.products > .rotate-box-1,
 .contact > .rotate-box-1 {
 	background-color: #f7f7f7;
 }
@@ -739,49 +414,6 @@ text-shadow: none;
     font-weight: 700;
 }
 
-#product-single .carousel-control {
-    position: absolute;
-    top: 15px;
-    left: auto;
-    right: 0;
-    bottom: 0;
-    width: 28px;
-    height: 28px;
-    font-size: 16px;
-    line-height: 24px;
-    color: #aaa;
-    text-align: center;
-    text-shadow: none;
-    -webkit-border-radius: 4px;
-       -moz-border-radius: 4px;
-         -o-border-radius: 4px;
-            border-radius: 4px;
-    opacity: 0.8;
-    filter: alpha(opacity=80);
-}
-
-#product-single .carousel-control:hover,
-#product-single .carousel-control:focus {
-    color: #999;
-    text-decoration: none;
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
-
-#product-single .carousel-control.left {
-    right: 50px;
-    background: #fff;
-    border: 1px solid #cecece;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffffffff', GradientType=1);
-}
-
-#product-single .carousel-control.right {
-    right: 15px;
-    background: #fff;
-    border: 1px solid #cecece;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffffffff', GradientType=1);
-}
-
 #product-single .home-product-item{
     padding: 10px;
     border: 1px solid transparent;
@@ -804,36 +436,6 @@ text-shadow: none;
     margin-left: auto;
     margin-right: auto;
 }
-
-.single-desc table tr td{
-    padding: 3px 5px 3px 0;
-}
-
-.single-desc .price,
-.single-desc .price-old{
-    display: inline-block;
-    padding: 20px 0;
-}
-
-.single-desc .price{
-    color: #f89406;
-    font-weight: 400;
-    font-size: 23px;
-    line-height: 25px;
-}
-
-.single-desc .price-old{
-    text-decoration: line-through;
-    font-size: 16px;
-    font-weight: 400;
-    color: #555;
-    padding-right: 10px;
-}
-
-.single-desc .btn{
-    margin-top: 20px;
-}
-
 .content-detail{
     margin-bottom: 20px;
     margin-top: 20px;
@@ -893,16 +495,6 @@ text-shadow: none;
     color: #fff;
     background-color: #333;
     border-color: #222;
-}
-.about-banners a>div {
-	border: 3px solid #FEC800;
-	height: 270px;
-	overflow: hidden;
-	position: relative;
-	width: 230px;
-}
-.about-banners a>div:hover .product-hover{
-	display: block !important;
 }
 .product-hover {
 	background-color: rgba(0, 0, 0, 0.45);
