--- a/public/css/slick-theme.css
+++ b/public/css/slick-theme.css
@@ -178,7 +178,7 @@
 .slick-dots li button:before
 {
     font-family: 'slick';
-    font-size: 6px;
+    font-size: 12px;
     line-height: 20px;
 
     position: absolute;
@@ -200,5 +200,12 @@
 .slick-dots li.slick-active button:before
 {
     opacity: .75;
-    color: black;
+}
+#visso .slick-dots li.slick-active button:before, #visso .slick-dots li button:before
+{
+    color: #FEC800;
+}
+#quadrifoglio .slick-dots li.slick-active button:before, #quadrifoglio .slick-dots li button:before
+{
+    color: rgba(53,86,32, 1);
 }
