--- a/public/css/slick-theme.css
+++ b/public/css/slick-theme.css
@@ -19,16 +19,15 @@
 .slick-prev,
 .slick-next
 {
-    font-size: 0;
-    line-height: 0;
-
+    font-size: 1.3em;
     position: absolute;
     top: 50%;
 
     display: block;
 
-    width: 20px;
-    height: 20px;
+    /*width: 20px;
+    height: 20px;*/
+    opacity: .85;
     padding: 0;
     margin-top: -10px\9; /*lte IE 8*/
     -webkit-transform: translate(0, -50%);
@@ -36,8 +35,6 @@
     transform: translate(0, -50%);
 
     cursor: pointer;
-
-    color: transparent;
     border: none;
     outline: none;
     background: transparent;
@@ -47,9 +44,8 @@
 .slick-next:hover,
 .slick-next:focus
 {
-    color: transparent;
     outline: none;
-    background: transparent;
+    opacity: 1
 }
 .slick-prev:hover:before,
 .slick-prev:focus:before,
@@ -87,10 +83,10 @@
     right: -25px;
     left: auto;
 }
-.slick-prev:before
+/*.slick-prev:before
 {
     content: '←';
-}
+}*/
 [dir='rtl'] .slick-prev:before
 {
     content: '→';
@@ -105,10 +101,10 @@
     right: auto;
     left: -25px;
 }
-.slick-next:before
+/*.slick-next:before
 {
     content: '→';
-}
+}*/
 [dir='rtl'] .slick-next:before
 {
     content: '←';
