--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 body {
 	background: #fff url('../images/bg_body.jpg') no-repeat fixed;
 	background-size: cover;
-	color: #6e6e6e;
+	color: #333;
 	font: 14px/26px 'Ubuntu', Helvetica, sans-serif;
 }
 a {
@@ -778,6 +778,7 @@ h2.product-title div {
 	right: 1px;
 }
 .content-proyect .product-details {
+	color: #fff;
 	height: 44px;
 }
 .proyect-title {
